// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`In Reception should display fromCity when fromAgencyDescription is not set  1`] = `
<Fragment>
  <GridRow>
    <GridCol
      columnFull={false}
      columnOneHalf={false}
      columnOneQuarter={false}
      columnOneThird={false}
      columnThreeQuarters={false}
      columnTwoThirds={false}
      setWidth="one-quarter"
    >
      <SortLov
        setColumnSort={[MockFunction]}
        sortColumn="lastName"
        sortColumns={
          Array [
            "lastName",
          ]
        }
        sortOrder="ASC"
      />
    </GridCol>
  </GridRow>
  <table>
    <thead>
      <tr>
        <th
          className="straight width10"
        />
        <th
          className="straight width15"
        >
          <SortableColumn
            column="lastName"
            heading="Name"
            setColumnSort={[MockFunction]}
            sortColumn="lastName"
            sortOrder="ASC"
          />
        </th>
        <th
          className="straight width10"
        >
          Prison no.
        </th>
        <th
          className="straight width10"
        >
          D.O.B.
        </th>
        <th
          className="straight width15"
        >
           Received from 
        </th>
        <th
          className="straight width10"
        >
          Incentive Level 
        </th>
        <th
          className="straight width25"
        >
          Flags
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="row-gutters"
        key="offenderNo"
      >
        <td
          className="row-gutters"
        >
          <OffenderLink
            alerts={false}
            offenderNo="offenderNo"
          >
            <OffenderImage
              offenderNo="offenderNo"
            />
          </OffenderLink>
        </td>
        <td
          className="row-gutters"
        >
          <OffenderLink
            alerts={false}
            offenderNo="offenderNo"
          >
            <OffenderName
              firstName="firstName"
              lastName="lastName"
            />
          </OffenderLink>
        </td>
        <td
          className="row-gutters"
        >
          offenderNo
        </td>
        <td
          className="row-gutters"
        >
          <FormattedDate
            isoDate="1980-10-10"
          />
        </td>
        <td>
           
          York
           
        </td>
        <td>
           
          Entry
           
        </td>
        <td
          className="row-gutters"
        >
          <Flags
            alerts={
              Array [
                "HA",
                "XSA",
                "XA",
                "PEEP",
                "XEL",
                "XRF",
                "XTACT",
              ]
            }
            category=""
            offenderNo="offenderNo"
          />
        </td>
      </tr>
    </tbody>
  </table>
</Fragment>
`;

exports[`In Reception should render the page correctly 1`] = `
<Fragment>
  <GridRow>
    <GridCol
      columnFull={false}
      columnOneHalf={false}
      columnOneQuarter={false}
      columnOneThird={false}
      columnThreeQuarters={false}
      columnTwoThirds={false}
      setWidth="one-quarter"
    >
      <SortLov
        setColumnSort={[MockFunction]}
        sortColumn="lastName"
        sortColumns={
          Array [
            "lastName",
          ]
        }
        sortOrder="ASC"
      />
    </GridCol>
  </GridRow>
  <table>
    <thead>
      <tr>
        <th
          className="straight width10"
        />
        <th
          className="straight width15"
        >
          <SortableColumn
            column="lastName"
            heading="Name"
            setColumnSort={[MockFunction]}
            sortColumn="lastName"
            sortOrder="ASC"
          />
        </th>
        <th
          className="straight width10"
        >
          Prison no.
        </th>
        <th
          className="straight width10"
        >
          D.O.B.
        </th>
        <th
          className="straight width15"
        >
           Received from 
        </th>
        <th
          className="straight width10"
        >
          Incentive Level 
        </th>
        <th
          className="straight width25"
        >
          Flags
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="row-gutters"
        key="offenderNo"
      >
        <td
          className="row-gutters"
        >
          <OffenderLink
            alerts={false}
            offenderNo="offenderNo"
          >
            <OffenderImage
              offenderNo="offenderNo"
            />
          </OffenderLink>
        </td>
        <td
          className="row-gutters"
        >
          <OffenderLink
            alerts={false}
            offenderNo="offenderNo"
          >
            <OffenderName
              firstName="firstName"
              lastName="lastName"
            />
          </OffenderLink>
        </td>
        <td
          className="row-gutters"
        >
          offenderNo
        </td>
        <td
          className="row-gutters"
        >
          <FormattedDate
            isoDate="1980-10-10"
          />
        </td>
        <td>
           
          Leeds
           
        </td>
        <td>
           
          Entry
           
        </td>
        <td
          className="row-gutters"
        >
          <Flags
            alerts={
              Array [
                "HA",
                "XSA",
                "XA",
                "PEEP",
                "XEL",
                "XRF",
                "XTACT",
              ]
            }
            category=""
            offenderNo="offenderNo"
          />
        </td>
      </tr>
    </tbody>
  </table>
</Fragment>
`;
